--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css" class="style">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="test.css">
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
            </div>
       </div>
     </div>
-    <nav>
+    <!-- <nav>
       <div class="logo"> PATEL SHRI LOGISTICS</div>
       <input type="checkbox" id="click">
       <label for="click" class="menu-btn">
@@ -44,7 +45,35 @@
           GET A QUOTE
         </button>
       </div>
-    </nav>
+    </nav> -->
+
+    <div class="navbar">
+      <div class="company-name">PATEL SHREE LOGISTICS</div>
+      <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+      <ul class="nav-links">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">OUR SERVICES</a></li>
+          <li><a href="#">OUR FLEET</a></li>
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">CONTACT US</a></li>
+      </ul>
+      <button class="quote-button">GET A QUOTE</button>
+
+      <script>
+          const hamburger = document.querySelector('.hamburger');
+          const navLinks = document.querySelector('.nav-links');
+
+          hamburger.addEventListener('click', () => {
+              navLinks.classList.toggle('show');
+          });
+      </script>
+  </div>
+
+
   <div class="header">
     <div class="text-content">
       <h1>Bhopal to Indore Transport</h1>
